kubernetes-manifests-dr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiseling-ingress
  namespace: wiseling
  annotations:
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: wiseling
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=3600
    # UNCOMMENT AND APPLY THESE THREE AFTER ACM CERT IS VALIDATED AND DEPLOYED. THEN SWITCH THE SERVICE PORT TO 443 AND TYPE TO HTTPS IN TERRAFORM R53 TARGET GROUP.
    # alb.ingress.kubernetes.io/certificate-arn: <output from terraform DR_ingress_cert_annotation>
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/v1/events
        pathType: Prefix
        backend:
          service:
            name: wallet-service
            port:
              number: 8001
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8000
      - path: /api/v1/envinfo
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8000
      - path: /api/v1/wallet
        pathType: Prefix
        backend:
          service:
            name: wallet-service
            port:
              number: 8001
      - path: /api/v1/conversions
        pathType: Prefix
        backend:
          service:
            name: conversion-service
            port:
              number: 8002
      - path: /api/v1/withdrawals
        pathType: Prefix
        backend:
          service:
            name: withdrawal-service
            port:
              number: 8003
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
